--- a/СигмаАлгебра.md
+++ b/СигмаАлгебра.md
@@ -28,13 +28,10 @@ $\mathcal{F} - \sigma \text{ алгебра}$
 
 **Борелевской сигма-алгеброй** в $\mathbb{R}$ называется самая маленькая среди  всех возможных $\sigma$-алгебр, содержащих любые интервалы на прямой.
 
-**Минимальная**  $\sigma$-алгебраю
+**Минимальная**  $\sigma$-алгебра.
 
 Вероятность - функции, определённая на множестве событий A.
 
-вероятность  неотрицательную нормированную меру, заданную на $\sigma$-алгебре $\mathcal{F}$ подмножеств $\Omega$.
+Вероятность  неотрицательная нормированная мера, заданная на $\sigma$-алгебре $\mathcal{F}$ подмножеств $\Omega$.
 
-
-
-
-
+| Зачем нужна?
