--- a/Конспект.md
+++ b/Конспект.md
@@ -110,3 +110,7 @@ $\int_A f(x) , \mu(dx) = \int_X f(x) , \mathbf{1}_A(x) , \mu(dx).$
 
 Где $\mathbf{1}_A(x)$ - индикаторное множество $A$, а $\mathcal{P}_f$ - семейство всех простых функций $f_s(x) \leqslant f(x)$.
 
+# Свойства условных математических ожиданий
+
+![Много писать в LaTeX. Написал на листке](./УМО_св-ва.jpg)
+
