--- a/Конспект.md
+++ b/Конспект.md
@@ -114,3 +114,6 @@ $\int_A f(x) , \mu(dx) = \int_X f(x) , \mathbf{1}_A(x) , \mu(dx).$
 
 ![Много писать в LaTeX. Написал на листке](./УМО_св-ва.jpg)
 
+# Понятие матрингала, субмартингала, супермартингала.
+
+![Martingal](/home/sergey/University/ЭконометрическоеМоделированиеИСтохастическиеПроцессы/Мартингал.jpg)
