--- a/Конспект.md
+++ b/Конспект.md
@@ -117,3 +117,28 @@ $\int_A f(x) , \mu(dx) = \int_X f(x) , \mathbf{1}_A(x) , \mu(dx).$
 # Понятие матрингала, субмартингала, супермартингала.
 
 ![Martingal](/home/sergey/University/ЭконометрическоеМоделированиеИСтохастическиеПроцессы/Мартингал.jpg)
+
+# Основные неравенства (Коши-Буняковского, Чебышева, Иенсена, Минковского, Гельдера)
+
+## Коши-Буняковского
+
+## ![image-20231223115603093](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223115603093.png)
+
+## Чебышева
+
+![image-20231223115709314](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223115709314.png)
+
+## Иенсена
+
+## ![image-20231223115741430](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223115741430.png) 
+
+## Минковского
+
+![image-20231223115822021](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223115822021.png)
+
+## Гельдера
+
+![image-20231223115833941](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223115833941.png)
+
+# Типы сходимости
+
