--- a/Конспект.md
+++ b/Конспект.md
@@ -142,3 +142,18 @@ $\int_A f(x) , \mu(dx) = \int_X f(x) , \mathbf{1}_A(x) , \mu(dx).$
 
 # Типы сходимости
 
+## Почти наверное
+
+![image-20231223120141475](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223120141475.png)
+
+## По вероятности
+
+![image-20231223120621566](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223120621566.png)
+
+## В средне-квадратическом
+
+![image-20231223120728565](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223120728565.png)
+
+## По распределению
+
+![image-20231223120706774](/home/sergey/snap/typora/86/.config/Typora/typora-user-images/image-20231223120706774.png)
